fix Delete method
