# pb/fxgateway.swagger.json
@@ -77,22 +77,6 @@
         "tags": [
           "FxGateway"
         ]
-      }
-    },
-    "/system/functions": {
-      "get": {
-        "operationId": "List",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/pbFunctions"
-            }
-          }
-        },
-        "tags": [
-          "FxGateway"
-        ]
       },
       "delete": {
         "operationId": "Delete",
@@ -107,11 +91,27 @@
         "parameters": [
           {
             "name": "FunctionName",
-            "in": "query",
-            "required": false,
+            "in": "path",
+            "required": true,
             "type": "string"
           }
         ],
+        "tags": [
+          "FxGateway"
+        ]
+      }
+    },
+    "/system/functions": {
+      "get": {
+        "operationId": "List",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/pbFunctions"
+            }
+          }
+        },
         "tags": [
           "FxGateway"
         ]
