# server.go
@@ -17,15 +17,21 @@ import (
 	"k8s.io/client-go/kubernetes"
 )
 
+// FxGateway는 gRPC service 구현체
 type FxGateway struct {
-	conf           config.FxGatewayConfig
-	httpServer     *http.Server
-	grpcServer     *grpc.Server
-	kubeClient     *kubernetes.Clientset
+	//환경 변수를 통해 설정한 config
+	conf       config.FxGatewayConfig
+	httpServer *http.Server
+	grpcServer *grpc.Server
+	//kubernetes clients
+	kubeClient *kubernetes.Clientset
+	//prometheus metrics
 	metricsOptions metrics.MetricOptions
+	//prometheus client
 	metricsFetcher metrics.PrometheusQueryFetcher
 }
 
+// FxGateway 생성
 func NewFxGateway(c config.FxGatewayConfig, k *kubernetes.Clientset) *FxGateway {
 	return &FxGateway{
 		conf:           c,
@@ -35,6 +41,8 @@ func NewFxGateway(c config.FxGatewayConfig, k *kubernetes.Clientset) *FxGateway 
 	}
 }
 
+// grpc handler
+// function 호출
 func (f *FxGateway) Invoke(c context.Context, s *pb.InvokeServiceRequest) (*pb.Message, error) {
 	start := time.Now()
 	output, err := service.Invoke(s.Service, f.conf.FunctionNamespace, f.conf.FxWatcherPort, s.Input, f.conf.InvokeTimeout)
@@ -43,11 +51,14 @@ func (f *FxGateway) Invoke(c context.Context, s *pb.InvokeServiceRequest) (*pb.M
 		return nil, err
 	}
 	// For Monitoring /////////////////////////////////////////////////////////
-	// function이 호출될 때마다 invoke count, time 정보 수집
+	// function이 호출될 때마다 invoke count를 증가와 invoke에 걸린 시간 정보 수집
 	f.metricsOptions.Notify(s.Service, end, "OK")
 	//////////////////////////////////////////////////////////////////////////
 	return &pb.Message{Msg: output}, nil
 }
+
+// grpc handler
+// function list 조회
 func (f *FxGateway) List(c context.Context, s *pb.Empty) (*pb.Functions, error) {
 	functions, err := service.List(f.conf.FunctionNamespace, f.kubeClient)
 	if err != nil {
@@ -59,6 +70,9 @@ func (f *FxGateway) List(c context.Context, s *pb.Empty) (*pb.Functions, error) 
 	//////////////////////////////////////////////////////////////////////////
 	return &pb.Functions{Functions: fns}, nil
 }
+
+// grpc handler
+// function 배포
 func (f *FxGateway) Deploy(c context.Context, s *pb.CreateFunctionRequest) (*pb.Message, error) {
 	deployConfig := &service.DeployHandlerConfig{
 		EnableHttpProbe:   f.conf.EnableHttpProbe,
@@ -73,6 +87,9 @@ func (f *FxGateway) Deploy(c context.Context, s *pb.CreateFunctionRequest) (*pb.
 	}
 	return &pb.Message{Msg: "OK"}, nil
 }
+
+// grpc handler
+// function 삭제
 func (f *FxGateway) Delete(c context.Context, s *pb.DeleteFunctionRequest) (*pb.Message, error) {
 	err := service.Delete(s.FunctionName, f.conf.FunctionNamespace, f.kubeClient)
 	if err != nil {
@@ -80,6 +97,9 @@ func (f *FxGateway) Delete(c context.Context, s *pb.DeleteFunctionRequest) (*pb.
 	}
 	return &pb.Message{Msg: "OK"}, nil
 }
+
+// grpc handler
+// function 업데이트
 func (f *FxGateway) Update(c context.Context, s *pb.CreateFunctionRequest) (*pb.Message, error) {
 	err := service.Update(f.conf.FunctionNamespace, s, f.kubeClient, f.conf.SecretMountPath)
 	if err != nil {
@@ -87,6 +107,9 @@ func (f *FxGateway) Update(c context.Context, s *pb.CreateFunctionRequest) (*pb.
 	}
 	return &pb.Message{Msg: "OK"}, nil
 }
+
+// grpc handler
+// function 정보 조회
 func (f *FxGateway) GetMeta(c context.Context, s *pb.FunctionRequest) (*pb.Function, error) {
 	fn, err := service.GetMeta(s.FunctionName, f.conf.FunctionNamespace, f.kubeClient)
 	if err != nil {
@@ -98,6 +121,9 @@ func (f *FxGateway) GetMeta(c context.Context, s *pb.FunctionRequest) (*pb.Funct
 	///////////////////////////////////////////////////////////////////////////
 	return fn, nil
 }
+
+// grpc handler
+// function의 출력과 에러 조회
 func (f *FxGateway) GetLog(c context.Context, s *pb.FunctionRequest) (*pb.Message, error) {
 	log, err := service.GetLog(s.FunctionName, f.conf.FunctionNamespace, f.kubeClient)
 	if err != nil {
@@ -105,6 +131,9 @@ func (f *FxGateway) GetLog(c context.Context, s *pb.FunctionRequest) (*pb.Messag
 	}
 	return &pb.Message{Msg: log}, nil
 }
+
+// grpc handler
+// function의 복제본 수 업데이트
 func (f *FxGateway) ReplicaUpdate(c context.Context, s *pb.ScaleServiceRequest) (*pb.Message, error) {
 	err := service.ReplicaUpdate(f.conf.FunctionNamespace, s, f.kubeClient)
 	if err != nil {
@@ -112,6 +141,9 @@ func (f *FxGateway) ReplicaUpdate(c context.Context, s *pb.ScaleServiceRequest) 
 	}
 	return &pb.Message{Msg: "OK"}, nil
 }
+
+// grpc handler
+// gateway의 버전 정보 조회
 func (f *FxGateway) Info(c context.Context, s *pb.Empty) (*pb.Message, error) {
 	info, err := service.Info(f.kubeClient)
 	if err != nil {
@@ -119,6 +151,9 @@ func (f *FxGateway) Info(c context.Context, s *pb.Empty) (*pb.Message, error) {
 	}
 	return &pb.Message{Msg: info}, nil
 }
+
+// grpc handler
+// gateway의 health check
 func (f *FxGateway) HealthCheck(c context.Context, s *pb.Empty) (*pb.Message, error) {
 	return &pb.Message{Msg: "OK"}, nil
 }
@@ -126,6 +161,7 @@ func (f *FxGateway) HealthCheck(c context.Context, s *pb.Empty) (*pb.Message, er
 // -----------------------------------------------------------------------------
 
 // Start Openfx Gateway
+// 멀티플렉서 생성, 핸들러 등록, grpc/http 서버 시작
 func (f *FxGateway) Start() error {
 
 	// For Monitoring /////////////////////////////////////////////////////////
@@ -138,30 +174,34 @@ func (f *FxGateway) Start() error {
 	exporter.StartServiceWatcher(f.conf.FunctionNamespace, f.kubeClient, f.metricsOptions, servicePollInterval)
 	// Prometheus 매트릭 수집기 등록
 	metrics.RegisterExporter(exporter)
-
 	///////////////////////////////////////////////////////////////////////////
 
 	var err error
 
 	// Initialize listener
+	// 프로토콜, IP 주소, 포트 번호를 설정하여 네트워크 연결 대기
 	conn, err := net.Listen("tcp", fmt.Sprintf(":%d", f.conf.TCPPort))
 	if err != nil {
 		panic(err)
 	}
 	defer conn.Close()
 
-	ctx := context.Background()
-	ctx, cancel := context.WithCancel(ctx)
-	defer cancel()
-
-	// tcpMuxer
+	// Multiplexer 생성
+	// payload에 따라 연결 다중화, 동일한 TCP listener에서 다양한 프로토콜을 사용 가능
 	tcpMux := cmux.New(conn)
 
 	// Connection dispatcher rules
 	grpcL := tcpMux.MatchWithWriters(cmux.HTTP2MatchHeaderFieldPrefixSendSettings("content-type", "application/grpc"))
 	httpL := tcpMux.Match(cmux.HTTP1Fast())
 
+	// http/grpc server의 값, 시그널, cancelation, deadline 등을 전달하기 위해서 사용
+	ctx := context.Background()
+	ctx, cancel := context.WithCancel(ctx)
+	defer cancel()
+
 	// initialize gRPC server instance
+	// gRPC service 구현체인 FxGateway를 전달하여 gRPC server에 handler를 등록하고
+	// gRPC server 반환
 	f.grpcServer, err = prepareGRPC(ctx, f)
 	if err != nil {
 		log.Fatalln("Unable to initialize gRPC server instance")
@@ -169,6 +209,7 @@ func (f *FxGateway) Start() error {
 	}
 
 	// initialize HTTP server
+	// grpc/http handler를 http server에 등록하고, http server 반환
 	f.httpServer, err = prepareHTTP(ctx, fmt.Sprintf("localhost:%d", f.conf.TCPPort), f.conf.FunctionNamespace, f.conf.FxWatcherPort, f.conf.InvokeTimeout, f.conf.ReadTimeout, f.conf.WriteTimeout, f.conf.IdleTimeout)
 	if err != nil {
 		log.Fatalln("Unable to initialize HTTP server instance")
@@ -187,5 +228,6 @@ func (f *FxGateway) Start() error {
 		}
 	}()
 
+	// Start Multiplexer
 	return tcpMux.Serve()
 }
